// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainMenuDropdown should be rendered correctly 1`] = `
<button
  aria-expanded={false}
  aria-haspopup={true}
  className="uui-button-box uui-enabled -clickable root type-primary"
  onClick={[Function]}
  role="menuitem"
  tabIndex={0}
>
  <div
    className="uui-caption"
  >
    Test button
  </div>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
</button>
`;

exports[`MainMenuDropdown should be rendered correctly with minimum props 1`] = `
<button
  aria-expanded={false}
  aria-haspopup={true}
  className="uui-button-box uui-enabled -clickable root type-primary"
  onClick={[Function]}
  role="menuitem"
  tabIndex={0}
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
</button>
`;
